--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="description" content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
     <title>Corso Web Developer - Epicode school</title>
     <link rel="stylesheet" href="assets/css/reset.css">
+
+    <!-- Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--    Open Sans -->
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
+    <!--    Montserrat -->
+    <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -16,8 +23,10 @@
 
     <main>
         <!-- Corso Web Developer -->
-        <section>
-            
+        <section id="course">
+            <h1>Corso Web Developer</h1>
+            <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
+            <button>PARTIAMO!</button>
         </section>
 
         <!-- Future -->
