--- a/index.html
+++ b/index.html
@@ -23,15 +23,37 @@
 
     <main>
         <!-- Corso Web Developer -->
-        <section id="course">
+        <section id="sect-course">
             <h1>Corso Web Developer</h1>
             <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
             <button>PARTIAMO!</button>
         </section>
 
         <!-- Future -->
-        <section>
+        <section id="sect-future">
+            <article>
+                <h3>Tutti ti cercheranno</h3>
+                <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
+            </article>
             
+            <article>
+                <h3>Lavora dove vuoi</h3>
+                <p>Lavora da casa, in riva al mare o in montagna.</p>
+            </article>
+
+            <article>
+                <img src="assets/images/notebook.jpg" alt="">
+            </article>
+
+            <article>
+                <h3>Scegli il tuo ruolo</h3>
+                <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+            </article>
+            
+            <article>
+                <h3>Lavoro in libertà</h3>
+                <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
+            </article>
         </section>
 
         <!-- Epicode garantisce -->
