--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img id="logo" src="assets/images/logo.png" alt="Logo Epicode"></a>
+        <a href="index.html"><img id="logo" src="assets/img/logo.png" alt="Logo Epicode"></a>
     </header>
 
     <main>
@@ -42,7 +42,7 @@
             </article>
 
             <article>
-                <img src="assets/images/notebook.jpg" alt="">
+                <img src="assets/img/notebook.jpg" alt="">
             </article>
 
             <article>
@@ -56,9 +56,13 @@
             </article>
         </section>
 
-        <!-- Epicode garantisce -->
-        <section>
-
+        <!-- Testimonianze -->
+        <section id="sect-testimoniaze">
+            <h2>Epicode garantisce</h2>
+            <blockquote>
+                &#34;3 mesi intensivi di corso che cambieranno radicalmente la tua vita&#34;
+                <cite><span>Mario Rossi</span> <br> CEO, Epicode</cite>
+            </blockquote>
         </section>
 
         <!-- Present -->
