section testimoniaze done

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
             <h2>Epicode garantisce</h2>
             <blockquote>
                 &#34;3 mesi intensivi di corso che cambieranno radicalmente la tua vita&#34;
-                <cite><span>Mario Rossi</span> <br> CEO, Epicode</cite>
+                <br>
+                <cite><span class="citator">Mario Rossi</span> <br> CEO, Epicode</cite>
             </blockquote>
         </section>
 
         <!-- Present -->
-        <section>
-
+        <section id="sect-present">
+            
         </section>
     </main>
 
