--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </article>
 
             <article>
-                <img src="assets/img/notebook.jpg" alt="">
+                <img src="assets/img/notebook.jpg" alt="PC image">
             </article>
 
             <article>
@@ -68,12 +68,31 @@
 
         <!-- Present -->
         <section id="sect-present">
-            
+            <!-- PC -->
+            <article>
+                <img src="assets/img/foto1.jpg" alt="PC picture">
+                <h3>Il tuo PC</h3>
+                <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+            </article>
+
+            <!-- Learn now -->
+            <article>
+                <img src="assets/img/foto2.jpg" alt="Colorfull PC image">
+                <h3>Impara ora</h3>
+                <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro</p>
+            </article>
+
+            <!-- Work now -->
+            <article>
+                <img src="assets/img/foto3.jpg" alt="Office image">
+                <h3>Lavora subito</h3>
+                <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro</p>
+            </article>
         </section>
     </main>
 
     <footer>
-
+        
     </footer>
 </body>
 </html>
