--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!--    Montserrat -->
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
 
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/b24d6cd0d9.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -26,7 +29,7 @@
         <section id="sect-course">
             <h1>Corso Web Developer</h1>
             <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
-            <button>PARTIAMO!</button>
+            <button type="button">PARTIAMO!</button>
         </section>
 
         <!-- Future -->
@@ -91,8 +94,21 @@
         </section>
     </main>
 
-    <footer>
-        
+    <footer id="footer">
+        <h2>Contattaci</h2>
+        <p>
+            <i class="fa-solid fa-square-phone"></i>
+            <a href="tel:+3911223456">&#40;+39&#41; 11223456</a>
+        </p>
+        <p>
+            <i class="fa-solid fa-square-envelope"></i> 
+            <a href="mailto:info@epicode.school">info@epicode.school</a>
+        </p>
+        <p>
+            <i class="fa-solid fa-square-arrow-up-right"></i>
+            Via Appia 1 - 00100 Roma &#40;RM&#41;
+        </p>
+        <p>&copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a>.</p>
     </footer>
 </body>
 </html>
