--- a/index-desktop.html
+++ b/index-desktop.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
 
     <!-- Icons -->
-    <script src="https://kit.fontawesome.com/b24d6cd0d9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link rel="stylesheet" href="assets/css/style-desktop.css">
 </head>
@@ -100,15 +100,15 @@
         <div class="container">
             <h2>Contattaci</h2>
         <p>
-            <i class="fa-solid fa-square-phone"></i>
+            <i class="fas fa-phone-square-alt"></i>
             <a href="tel:+3911223456">&#40;+39&#41; 11223456</a>
         </p>
         <p>
-            <i class="fa-solid fa-square-envelope"></i> 
+            <i class="fas fa-envelope"></i>
             <a href="mailto:info@epicode.school">info@epicode.school</a>
         </p>
         <p>
-            <i class="fa-solid fa-square-arrow-up-right"></i>
+            <i class="fas fa-external-link-square-alt"></i>
             Via Appia 1 - 00100 Roma &#40;RM&#41;
         </p>
         <p>&copy; 2021. Immagini di <a href="javascript:void(0)">Pixabay</a>.</p>
